package com.ssm.adapter.objectadapter;

/**
 * @author shaoshao
 * @version 1.0
 * @date 2022/5/19 11:14
 */
public class Voltage220V {

    public int output220V() {
        int src = 220;
        System.out.println("输出220V电压：" + src);
        return src;
    }


}
