@startuml
'https://plantuml.com/class-diagram

class Voltage220V {
    +output220V():int
}
interface Voltage5V {
    +output5V():int
}
class VoltageAdapter  implements Voltage5V {
    # voltage220V: Voltage220V
    + VoltageAdapter(voltage220V: Voltage220V)
}

VoltageAdapter o-- Voltage220V:聚合
class Client
class phone{
    charging(voltage5V: Voltage5V)):void
}
Client ..> VoltageAdapter: 依赖
Client ..> phone: 依赖
phone ..> Voltage5V: 依赖
phone ..> Voltage220V: 依赖
@enduml